<resources>
    <string name="app_name">FuelService</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fuel Service</string>
    <string name="nav_header_subtitle"></string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_prices">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_MyCar">My Car</string>
    <string name="menu_tripCalculator">Trip Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_logOut">Log out</string>

    <string name="register_heading">Lag Bruker</string>
    <string name="action_reg_button">Registrer</string>
    <string name="prompt_password">Passord</string>
    <string name="prompt_username">Brukernavn</string>
    <string name="prompt_email">Epost</string>

    <string name="action_login_button">Logg inn</string>
    <string name="login_header">Logg inn</string>
    <string name="icon">img placeholder</string>
    <string name="nearby">0.05km</string>
    <string name="nearby2">Nearby</string>
    <string name="cheapest">Cheapest</string>
    <string name="favorites">Favorites</string>
</resources>